[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "network-incident-response-env"
version = "1.0.0"
description = "OpenEnv-compatible SOC analyst training environment"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pydantic==2.6.0",
    "openai>=2.7.2,<3",
    "python-dotenv==1.0.0",
    "fastapi==0.110.0",
    "uvicorn[standard]==0.27.1",
    "httpx==0.27.0",
    "openenv-core>=0.2.0",
]

[project.scripts]
server = "server.app:main"

[tool.setuptools]
include-package-data = true
packages = ["server"]
